--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "gsap": "^3.12.5",
+    "mongoose": "^8.2.2"
   }
 }
