--- a/EcocovoitApp/package.json
+++ b/EcocovoitApp/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "gsap": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
